Fixes Search Overlay not visible on scrolling - with fixed header - and add info on documentation's theme

--- a/tailwind/custom/components/buttons.css
+++ b/tailwind/custom/components/buttons.css
@@ -9,6 +9,6 @@
 		@apply inline-block py-2 px-3 text-lg;
 	}
 	.btn-primary{
-		@apply bg-primary text-white rounded-full;
+		@apply bg-primary text-white rounded-full hover:text-white hover:bg-primary/75;
 	}
 }
